--- a/package.json
+++ b/package.json
@@ -33,7 +33,11 @@
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.10"
+    "react-native-sse": "^1.2.1",
+    "react-native-svg": "15.8.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-web": "~0.19.10",
+    "use-immer": "^0.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
