--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-svg": "15.8.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
-    "use-immer": "^0.11.0"
+    "use-immer": "^0.11.0",
+    "expo-audio": "~0.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
