--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
-    "use-immer": "^0.11.0"
+    "use-immer": "^0.11.0",
+    "expo-file-system": "~18.1.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
